[tool.poetry]
name = "docker-unr"
version = "0.1.0"
description = ""
authors = ["panza238 <ezequiel.panzarasa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
